# rs-gallery

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  deny.toml  flake.nix  justfile  rust-toolchain.toml  svgo.config.js
.github/workflows/: ci.yml
fonts/noto/: OFL.txt
gallery-build/: Cargo.toml
gallery-build/src/: lib.rs
gallery-macros/: Cargo.toml
gallery-macros/src/: lib.rs
nix/: checker.nix  formatter.nix  validate.nix
scripts/: ci-coverage.sh  demo.sh  offscreen.scene.rs  profile.sh
src/: context.rs  fonts.rs  hot.rs  knobs.rs  launcher.rs  lib.rs  offscreen.rs  perf.rs  svg.rs  tree.rs  update.rs
template/: Cargo.toml  animation.scene.rs  build.rs  cargo-generate.toml  example.scene.rs  gallery.toml  justfile  knobs.scene.rs  lib.rs  main.rs
tools/: pyproject.toml
tools/src/gallery_perf/: __init__.py  analyze.py  cli.py  symbolicate.py
tools/tests/: test_analyze.py  test_symbolicate.py
